2009-07-11 Jesse Kornblum

	* Cleaned up -x mode to compare two (or more) files of
	  signatures. 

	* Cleaned up some code comments and Remove Before Flight tags

	
2009-04-18 Jesse Kornblum 

	* Experimenting with -x mode to compare two (or more)
	  files of signatures

	* Added some parameter validation code

	
2009-01-01 Jesse Kornblum 

	* Added fuzzy_hash_filename function to hash a file given
	  its filename. This avoids issues passing FILE * structures
	  on Win32 systems in programs not using the fopen convention.
	  See feature request 2142005.

	* Reconfigured all files using latest autoconf tools
	

2008-09-23 Jesse Kornblum 

	* Reinstated the code to call match_pretty() at the end of
	  main. This lets the -p and -d modes to display output and
	  fixes bug 2124423.

	* Version bump to 2.1.

	
2008-04-06 Jesse Kornblum 

	* Updated man page to include -t and -c modes.


2008-03-04 Jesse Kornblum 

	* Made b64 variable static in fuzzy.c
	

2008-02-29 Jesse Kornblum 

	* Version bump to 2.0, reconfigured.


2008-02-22 Jesse Kornblum 

	* Changed reading of known hash files back to using
	  unsigned char values. This also required updating
	  the match_compare function to handle Unicode
	  characters when displaying match results.

	* Flipped files in Win32 zip file to have CR/LF 
	

2008-02-18 Jesse Kornblum 

	* Added man pages to the EXTRA_DIST Makefile variable.
	  Still need to reconfigure.

	* Added more documentation to the Windows zip file along
	  with the sample.c file

	* Removed extraneous recongfiguration from Makefile.am
	

2008-02-17 Jesse Kornblum 

	* Updated build system to create Win32 DLL, documentation,
	  and packages.

	* Added check in print_error functions to see if the state
	  is valid. 
	  
	* Updated documentation, usage message.

	* Added signature comparison example to sample program.
	

2008-02-16 Jesse Kornblum 

	* Removed block_size value from state variable. 
	  Nobody was using it.
